@@ -1,5 +1,5 @@
-# strdup.m4 serial 2
-dnl Copyright (C) 2002, 2003 Free Software Foundation, Inc.
+# strdup.m4 serial 3
+dnl Copyright (C) 2002, 2003, 2004 Free Software Foundation, Inc.
 dnl This file is free software, distributed under the terms of the GNU
 dnl General Public License.  As a special exception to the GNU General
 dnl Public License, this file may be distributed as part of a program
@@ -14,8 +14,7 @@ AC_DEFUN([gl_FUNC_STRDUP],
   fi
 ])
 
-# Prerequisites of lib/strdup.c.
+# Prerequisites of lib/strdup.h and lib/strdup.c.
 AC_DEFUN([gl_PREREQ_STRDUP], [
-  :
+  AC_CHECK_DECLS(strdup)
 ])
-
