@@ -1,3 +1,7 @@
+2004-01-18  Simon Josefsson  <jas@extundo.com>
+
+	* strdup.m4 (gl_PREREQ_STRDUP): Check whether strdup is declared.
+
 2004-02-18  Bruno Haible  <bruno@clisp.org>
 
 	* xsize.m4 (gl_XSIZE): Require AC_C_INLINE.
